CSS/style.production.css
/* ... */
.button img,
.button span {
    vertical-align: middle; /* Ensure vertical alignment */
}

#download-CV {
  height: 20px;
  width: auto;
  margin-left: 4px;
  text-align: center;
  filter: invert(100%) sepia(5%) saturate(0%) hue-rotate(74deg) brightness(112%) contrast(101%);   /* poperties for svg color: white */
}

.home-msg {
  padding-top: 100px;
}

/************************* SKILLS BAR ****************/
.skills-bar {
  padding-bottom: 5%;
  padding-top: 5%;
  text-align: center;
  width: 100%;
}

.skills-bar img {
  height: 50px;
  margin-right: 5px;
}

/************************* SKILLS TABLE ****************/
/* .skills-table {
  display: inline-block;
  clear: both;
} */

#tools-cards {
  /* width: auto;
  display: grid;
  grid-gap: var(--spacing_s);
  --auto-grid-min-size: 300px;
  grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
  justify-items: center; */
  /* grid-auto-rows: 1fr; /* this makes all boxes equal height, */
  /* grid-auto-flow: row; */

  display: -webkit-box;

  display: -ms-flexbox;

  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.tools-cards_cards-container {
  text-align: center;
}

.tools-cards_col {
  margin: var(--spacing_s);
  padding: var(--spacing_s);
  max-width: 300px;
  border: 1px solid var(--primary-color);
  border-radius: 20px;
  -webkit-box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.34);
  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.34);
}
@media all and (max-width: 660px) {
  .tools-cards_col {
    max-width: 100%;
    width: 100%;
    margin: 5px;
  }
}

#tools-cards h4 {
  margin: var(--spacing_s);
  text-align: center;
  margin-top: 0;
}

.tech-card {
  background-color: #00ffdd;
  color: white;
  border-radius: 5px;
  padding: 2px 5px;
  white-space: nowrap;
  text-align: center;
  line-height: 2;
  font-weight: bolder;
}

/*********************************************************************** ABOUT SECTION  **************************************************/

#about-page {
  padding-top: 200px;
}

/*********************************************************************** WORK SECTION  **************************************************/
#work-page {
  padding-top: 125px;
}

.flex-container {
  display: flex;
  flex-wrap: wrap;
  gap: 10px; /* Optional: Adds space between the flex items */
}

.flex-item {
  background-color: #ffffff;
  border: 1px solid #ccc;
  border-radius: 20px;
  -webkit-box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.34);
  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.34);
  text-align: center;
  padding-bottom: 20px;
  margin: 20px;
  font-size: 20px;
  flex: 1 1 calc(50% - 60px);  /* Adjusts the width to 2 columns with gaps */
  min-width: 415px;
  /* max-width: 45%;
  min-width: 300px; */
  box-sizing: border-box;
  /* Ensures padding and border are included in the width calculation */
}

.tech-cards-container {
  padding: 2% 5%;
}

.project-description {
  text-align: justify;
  padding: 0 5%;
}

.project-img {
  width: 100%;
  height: 250px;
  object-fit: cover;
}

/* Grid fallback */
/* .project-grid__item {
  display: inline-block;
  width: 33%;
  text-align: left;
} */
/* ... */

